src/test/ui/async-await/async-fn-nonsend.stderr
error: future cannot be sent between threads safely
  --> $DIR/async-fn-nonsend.rs:56:17
   |
LL |     assert_send(non_send_temporary_in_match());
   |                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ future returned by `non_send_temporary_in_match` is not `Send`
   |
   = help: within `impl Future<Output = ()>`, the trait `Send` is not implemented for `Rc<()>`
note: future is not `Send` as this value is used across an await
  --> $DIR/async-fn-nonsend.rs:33:25
   |
LL |     match Some(non_send()) {
   |           ---------------- has type `Option<impl Debug>` which is not `Send`
LL |         Some(_) => fut().await,
   |                         ^^^^^^ await occurs here, with `Some(non_send())` maybe used later
...
LL | }
   | - `Some(non_send())` is later dropped here
note: required by a bound in `assert_send`
  --> $DIR/async-fn-nonsend.rs:52:24
   |
LL | fn assert_send(_: impl Send) {}
   |                        ^^^^ required by this bound in `assert_send`

error: aborting due to previous error

